# edict_mcp

kilo-edict-mcp/: .env.example  README.md  pyproject.toml
kilo-edict-mcp/src/edict_mcp/: __init__.py  client.py  config.py  exceptions.py  models.py  server.py
kilo-edict-mcp/src/edict_mcp/prompts/: __init__.py  templates.py
kilo-edict-mcp/src/edict_mcp/resources/: __init__.py  status.py
kilo-edict-mcp/src/edict_mcp/tools/: __init__.py  agents.py  events.py  tasks.py
kilo-edict-mcp/tests/: test_config.py  test_exceptions.py  test_integration.py  test_models.py
plans/: code_verification_report.md  detailed_verification_report.md  docker_skill_integration_plan.md  edict_api_analysis_report.md  edict_architecture_analysis.md  edict_docker_frontend_analysis.md  final_comprehensive_analysis.md  implementation_plan.md  kilo_edict_implementation_plan.md  phase1_mvp_tasks.md  skill_bilateral_interaction.md  skill_integration_final_plan.md  technical_feasibility_assessment_report.md
